chore: delete secret
