# docs/swagger/docs/swagger.yaml
@@ -54,6 +54,207 @@ definitions:
         example: bottle_name
         type: string
     type: object
+  model.NotionCreateDatabaseResponse:
+    properties:
+      archived:
+        type: boolean
+      cover:
+        properties:
+          external:
+            properties:
+              url:
+                type: string
+            type: object
+          type:
+            type: string
+        type: object
+      created_time:
+        type: string
+      icon:
+        properties:
+          emoji:
+            type: string
+          type:
+            type: string
+        type: object
+      id:
+        type: string
+      is_inline:
+        type: boolean
+      last_edited_time:
+        type: string
+      object:
+        type: string
+      parent:
+        properties:
+          page_id:
+            type: string
+          type:
+            type: string
+        type: object
+      properties:
+        properties:
+          "+1":
+            properties:
+              id:
+                type: string
+              name:
+                type: string
+              people:
+                type: object
+              type:
+                type: string
+            type: object
+          Description:
+            properties:
+              id:
+                type: string
+              name:
+                type: string
+              rich_text:
+                type: object
+              type:
+                type: string
+            type: object
+          Food group:
+            properties:
+              id:
+                type: string
+              name:
+                type: string
+              select:
+                properties:
+                  options:
+                    items:
+                      properties:
+                        color:
+                          type: string
+                        id:
+                          type: string
+                        name:
+                          type: string
+                      type: object
+                    type: array
+                type: object
+              type:
+                type: string
+            type: object
+          In stock:
+            properties:
+              checkbox:
+                type: object
+              id:
+                type: string
+              name:
+                type: string
+              type:
+                type: string
+            type: object
+          Last ordered:
+            properties:
+              date:
+                type: object
+              id:
+                type: string
+              name:
+                type: string
+              type:
+                type: string
+            type: object
+          Name:
+            properties:
+              id:
+                type: string
+              name:
+                type: string
+              title:
+                type: object
+              type:
+                type: string
+            type: object
+          Photo:
+            properties:
+              files:
+                type: object
+              id:
+                type: string
+              name:
+                type: string
+              type:
+                type: string
+            type: object
+          Price:
+            properties:
+              id:
+                type: string
+              name:
+                type: string
+              number:
+                properties:
+                  format:
+                    type: string
+                type: object
+              type:
+                type: string
+            type: object
+          Store availability:
+            properties:
+              id:
+                type: string
+              multi_select:
+                properties:
+                  options:
+                    items:
+                      properties:
+                        color:
+                          type: string
+                        id:
+                          type: string
+                        name:
+                          type: string
+                      type: object
+                    type: array
+                type: object
+              name:
+                type: string
+              type:
+                type: string
+            type: object
+        type: object
+      title:
+        items:
+          properties:
+            annotations:
+              properties:
+                bold:
+                  type: boolean
+                code:
+                  type: boolean
+                color:
+                  type: string
+                italic:
+                  type: boolean
+                strikethrough:
+                  type: boolean
+                underline:
+                  type: boolean
+              type: object
+            href: {}
+            plain_text:
+              type: string
+            text:
+              properties:
+                content:
+                  type: string
+                link: {}
+              type: object
+            type:
+              type: string
+          type: object
+        type: array
+      url:
+        type: string
+    type: object
   model.UpdateAccount:
     properties:
       name:
@@ -307,6 +508,50 @@ paths:
       tags:
       - accounts
       - admin
+  /api/v1/googleCalendar/getEventList:
+    get:
+      consumes:
+      - application/json
+      description: Get Google Calendar Event List
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            items:
+              type: string
+            type: array
+        "400":
+          description: fail
+          schema:
+            type: string
+      summary: Get Google Calendar Event List
+      tags:
+      - googleCalendar
+  /api/v1/notion/createDatabase:
+    post:
+      consumes:
+      - application/json
+      description: Creates a database as a subpage in the specified parent page, with
+        the specified properties schema. Currently, the parent of a new database must
+        be a Notion page or a wiki database.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.NotionCreateDatabaseResponse'
+            type: array
+        "400":
+          description: fail
+          schema:
+            type: string
+      summary: Create a new Notion Database
+      tags:
+      - notion
   /bottles:
     get:
       consumes:
